# o-charts_pi

./: VERSION.cmake
cmake/: TemplateVersion
flatpak/: org.opencpn.OpenCPN.Plugin.o-charts.yaml
libs/wxcurl/: CMakeLists.txt
libs/zlib/: CMakeLists.txt
